; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4xdr.c_encode_fsinfo.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4xdr.c_encode_fsinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }
%struct.compound_hdr = type { i32 }

@nfs4_fsinfo_bitmap = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xdr_stream*, i32*, %struct.compound_hdr*)* @encode_fsinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encode_fsinfo(%struct.xdr_stream* %0, i32* %1, %struct.compound_hdr* %2) #0 {
  %4 = alloca %struct.xdr_stream*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.compound_hdr*, align 8
  store %struct.xdr_stream* %0, %struct.xdr_stream** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.compound_hdr* %2, %struct.compound_hdr** %6, align 8
  %7 = load %struct.xdr_stream*, %struct.xdr_stream** %4, align 8
  %8 = load i32, i32* @nfs4_fsinfo_bitmap, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @nfs4_fsinfo_bitmap, align 4
  %11 = call i32 @ARRAY_SIZE(i32 %10)
  %12 = load %struct.compound_hdr*, %struct.compound_hdr** %6, align 8
  %13 = call i32 @encode_getattr(%struct.xdr_stream* %7, i32 %8, i32* %9, i32 %11, %struct.compound_hdr* %12)
  ret void
}

declare dso_local i32 @encode_getattr(%struct.xdr_stream*, i32, i32*, i32, %struct.compound_hdr*) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
